# Realtime-Tooling

./: .gitignore  README.md  main.py  pyproject.toml  template.env  test_realtime_api.py
.github/workflows/: tests.yml
static/: app.js  audio-processor.js  index.html  styles.css
tests/: __init__.py  test_main.py  test_static.py
