[project]
name = "realtime-tooling"
version = "0.1.0"
description = "Azure OpenAI GPT-4o Realtime Audio Chat Application"
requires-python = ">=3.12"
dependencies = [
    "python-socketio>=5.10.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]


